--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.0.1",
   "engines": {
     "node": "6.2.0"
-},
-  "private": "true",
+  },
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "*",
     "mongodb": "^2.2.33",
